# domain-expansion-effector

./: .dockerignore  CITATION.cff  Dockerfile  Gradio.py  README.md  README_EN.md  README_original.md  app.py  detection.py  gradio_test.py  gradio_test2.py  hello.py  inference.py  keypoint_classification_byAE.ipynb  pyproject.toml  requirements.txt  領域展開_ref.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST.md
.gradio/flagged/: dataset1.csv  dataset2.csv
.gradio/flagged/video/2783ea95f6900daa39b1/: sample.webm
.gradio/flagged/video/862cb5293d961feb3950/: sample.webm
model/: __init__.py
model/keypoint_classifier/: keypoint_classifier.keras  keypoint_classifier_byAE.keras  keypoint_classifier_byAE.py  keypoint_classifier_byAE.tflite  keypoint_classifier_label.csv
