[project]
name = "domain-expansion-effector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.16.0",
    "matplotlib==3.5.1",
    "mediapipe>=0.10.11",
    "opencv-python==4.6.0.66",
    "protobuf>=3.9.2,<3.20",
    "scikit-learn==1.0.2",
    "tensorflow>=2.11.1",
]
