[project]
name = "domain-expansion-effector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.5.1",
    "mediapipe>=0.10.11",
    "opencv-python==4.6.0.66",
    "protobuf==4.25.5",
    "scikit-learn==1.0.2",
    "numpy==1.26.0",
    "pyaudio==0.2.13",
    "tensorflow==2.18.0",
]
